--- a/Introduction to Python/N02_string_demo.ipynb
+++ b/Introduction to Python/N02_string_demo.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "# Correct way to modify a string\n",
     "modified_string = \"J\" + original_string[1:]\n",
-    "print(\"Modified String:\", modified_string)\n"
+    "print(\"String:\", modified_string)\n"
    ]
   },
   {
