--- a/Lab_Assignment1/StudentGradeManagementSystem.ipynb
+++ b/Lab_Assignment1/StudentGradeManagementSystem.ipynb
@@ -54,15 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "78e4aa0e-2a7d-44cc-9f8b-b3593c1e8176",
    "metadata": {
     "id": "78e4aa0e-2a7d-44cc-9f8b-b3593c1e8176"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World! Welcome to the Student Gradebook Management System.\n"
+     ]
+    }
+   ],
    "source": [
     "# In the space below, please print \"Hello, World! Welcome to the Student Gradebook Management System.\"\n",
-    "# (1 mark)\n"
+    "# (1 mark)\n",
+    "\n",
+    "print(\"Hello, World! Welcome to the Student Gradebook Management System.\")"
    ]
   },
   {
@@ -664,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
