--- a/Lab_Assignment1/StudentGradeManagementSystem.ipynb
+++ b/Lab_Assignment1/StudentGradeManagementSystem.ipynb
@@ -86,9 +86,9 @@
    "source": [
     "# Fill in your information using the defined variables below:\n",
     "# (1 mark)\n",
-    "lab_group_number =\n",
-    "intake_year =\n",
-    "intake_semester = \"\" #\"Fall\" or \"Winter\"\n",
+    "lab_group_number = 14\n",
+    "intake_year = 2024\n",
+    "intake_semester = \"Fall\" #\"Fall\" or \"Winter\"\n",
     "\n",
     "# Using f-strings and the variables above, print \"This is implemented by Group <lab_group_number>, for ENGG680 <intake_semester> of <intake_year>\"\n",
     "# (2 marks)\n"
