--- a/Lab_Assignment1/StudentGradeManagementSystem.ipynb
+++ b/Lab_Assignment1/StudentGradeManagementSystem.ipynb
@@ -77,12 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "l3Venmnzsq2m",
    "metadata": {
     "id": "l3Venmnzsq2m"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is implemented by Group 14, for ENGG680 Fall of 2024\n"
+     ]
+    }
+   ],
    "source": [
     "# Fill in your information using the defined variables below:\n",
     "# (1 mark)\n",
@@ -91,21 +99,31 @@
     "intake_semester = \"Fall\" #\"Fall\" or \"Winter\"\n",
     "\n",
     "# Using f-strings and the variables above, print \"This is implemented by Group <lab_group_number>, for ENGG680 <intake_semester> of <intake_year>\"\n",
-    "# (2 marks)\n"
+    "# (2 marks)\n",
+    "print(f\"This is implemented by Group {lab_group_number}, for ENGG680 {intake_semester} of {intake_year}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "mTPZ16XEtnHV",
    "metadata": {
     "id": "mTPZ16XEtnHV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The subjects involved in this grading system is English and Math.\n"
+     ]
+    }
+   ],
    "source": [
     "# Use indexing to print \"The subjects involved in this grading system is English and Math.\" using \"subjects\" below.\n",
     "# (2 marks)\n",
-    "subjects = (\"English\", \"Math\")\n"
+    "subjects = (\"English\", \"Math\")\n",
+    "print(\"The subjects involved in this grading system is \" + subjects[0] + \" and \" + subjects[1] + \".\")"
    ]
   },
   {
