--- a/Lab_Assignment3/MachineLearningIntro.ipynb
+++ b/Lab_Assignment3/MachineLearningIntro.ipynb
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -695,7 +695,7 @@
     "# Comment on the pattern\n",
     "# The errors move quickly towards zero until around the 700 step when\n",
     "# they are very close to zero and it flattens out.\n",
-    "# X reaches close to zero the faster while z takes longer."
+    "# X reaches close to zero the fastest while z takes longer."
    ]
   },
   {
