fixed zero division warnings

--- a/Lab_Assignment4/VehicleMotionStateClassification.ipynb
+++ b/Lab_Assignment4/VehicleMotionStateClassification.ipynb
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
     "    plt.show()\n",
     "\n",
     "    print(\"Classification Report:\")\n",
-    "    print(classification_report(actual, predicted))\n",
+    "    print(classification_report(actual, predicted, zero_division=0))\n",
     "\n",
     "display_cm_cr(y_test, y_pred)"
    ]
