added to 5.2.3 answer

--- a/Lab_Assignment4/VehicleMotionStateClassification.ipynb
+++ b/Lab_Assignment4/VehicleMotionStateClassification.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 446,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7616,7 +7616,7 @@
    },
    "source": [
     "#### 5.2.3 - Answer\n",
-    "1.The SVC model from Section 2 slightly outperformed the Random Forest model in Section 5, achieving higher test-set scores (0.83 and 0.84 vs. 0.84 and 0.75). Discrepancies may arise from Random Forest being more dependant on hyperparameter tuning, improved generalization due to preprocessing. Random Forest's accuracy dropping suggests that the model could be overfitting."
+    "1.The SVC model from Section 2 slightly outperformed the Random Forest model in Section 5, achieving higher test-set scores (0.83 and 0.84 vs. 0.85 and 0.71). Discrepancies may arise from Random Forest being more dependant on hyperparameter tuning and being a more complex model with higher variance. Random Forest's accuracy dropping suggests that the model could be overfitting."
    ]
   },
   {
